fix: mock drought eth AB#19598

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -43,7 +43,8 @@
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  eventName: event.eventName?.split('_')[0] || disasterTypeLabel,
+                  eventName:
+                    event.eventName?.split('_')[0] || disasterTypeLabel,
                   duration: event.duration
                 }
         "
@@ -62,7 +63,8 @@
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  eventName: event.eventName?.split('_')[0] || disasterTypeLabel,
+                  eventName:
+                    event.eventName?.split('_')[0] || disasterTypeLabel,
                   duration: event.duration
                 }
         "
