--- a/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.scss
@@ -1,11 +1,11 @@
-.date {
+.first-line {
   font-size: 14px;
 }
-.month {
+.second-line {
   font-size: 10px;
   font-weight: bold;
 }
-.hour {
+.third-line {
   font-size: 10px;
 }
 
