--- a/interfaces/IBF-dashboard/src/app/components/country-switcher/country-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/country-switcher/country-switcher.component.html
@@ -7,7 +7,7 @@
     [value]="country ? country.countryCodeISO3 : null"
   >
     <ion-select-option
-      *ngFor="let country of (countries$ | async)"
+      *ngFor="let country of countries$ | async"
       value="{{ country.countryCodeISO3 }}"
     >
       {{ country.countryName }}
