fix: tooltip on info-icon layer-overview AB#20164

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -123,6 +123,7 @@
                 class="ion-no-padding"
                 [color]="layer.active ? 'ibf-no-alert-primary' : 'ibf-white'"
                 style="width: 100%"
+                [title]="'aggregates-component.more-information' | translate"
               >
                 <ion-icon
                   [color]="layer.active ? 'ibf-white' : 'ibf-no-alert-primary'"
