--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -98,6 +98,7 @@
 
             .layer-control-info-icon {
               border-radius: 5px;
+              pointer-events: none;
             }
           }
         }
