--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -33,113 +33,78 @@
     </ion-menu-toggle>
     <ion-content>
       <ion-list class="ion-no-padding">
-        <ion-item
-          lines="full"
-          *ngFor="let layer of getLayersInOrder()"
-          [class.ion-hide]="!layer.show"
-          (click)="toggleLayer(layer)"
-          class="ion-no-padding"
-          [title]="layer.label"
-          [disabled]="layer.isLoading"
+        <ion-row
+          *ngFor="let layer of getLayersInOrder().check"
+          class="ion-justify-content-between ion-nowrap"
         >
-          <ion-row>
+          <ion-item lines="full">
             <ion-spinner *ngIf="layer.isLoading"></ion-spinner>
-            <ion-col
+            <ion-checkbox
               *ngIf="!layer.isLoading"
-              size="2"
-              class="layer-control-legend-col"
-              [class.point-layer]="
-                layer.type === IbfLayerType.point && layer.active
-              "
-              [class.glofas-layer]="
-                layer.name === IbfLayerName.glofasStations && layer.active
-              "
-              [class.typhoon-track-layer]="
-                layer.name === IbfLayerName.typhoonTrack && layer.active
-              "
-              [class.red-cross-layer]="
-                layer.name === IbfLayerName.redCrossBranches && layer.active
-              "
-              [class.dam-layer]="
-                layer.name === IbfLayerName.damSites && layer.active
-              "
-              [class.waterpoint-layer]="
-                (layer.name === IbfLayerName.waterpoints ||
-                  layer.name === IbfLayerName.waterpointsInternal) &&
-                layer.active
-              "
-              [class.health-layer]="
-                layer.name === IbfLayerName.healthSites && layer.active
-              "
-              [class.evacuation-center-layer]="
-                layer.name === IbfLayerName.evacuationCenters && layer.active
-              "
-              [class.school-layer]="
-                layer.name === IbfLayerName.schools && layer.active
-              "
-              [class.community-notification-layer]="
-                layer.name === IbfLayerName.communityNotifications &&
-                layer.active
-              "
-              [class.outline-layer]="
-                layer.name === IbfLayerName.alertThreshold && layer.active
-              "
-              [class.aggregate-layer-triggered]="
-                layer.group === IbfLayerGroup.aggregates &&
-                layer.active &&
-                eventService.state.thresholdReached
-              "
-              [class.aggregate-layer-non-triggered]="
-                layer.group === IbfLayerGroup.aggregates &&
-                layer.active &&
-                !eventService.state.thresholdReached
-              "
-              [class.raster-layer-raifall-forecast]="
-                layer.name === IbfLayerName.rainfallForecast && layer.active
-              "
-              [style.background]="
-                layer.active
-                  ? layer.legendColor
-                  : 'var(--ion-color-ibf-no-alert-tertiary)'
-              "
-            ></ion-col>
-            <ion-col size="8" class="layer-control-label-col">
-              <ion-item
-                lines="none"
-                class="ion-no-padding"
-                [color]="layer.active ? 'ibf-no-alert-primary' : 'ibf-white'"
-              >
-                <ion-label class="ion-no-margin" [title]="layer.label">
-                  {{ layer.label }}
-                </ion-label>
-              </ion-item>
-            </ion-col>
-            <ion-col
-              size="2"
-              class="layer-control-info-col ion-align-items-center ion-justify-content-center"
+              [checked]="layer.active"
+              (click)="toggleLayer(layer)"
+              class="ion-no-margin"
+              slot="start"
+            ></ion-checkbox>
+            <ion-label
+              class="ion-text-wrap ion-no-margin"
+              [title]="layer.label"
+              style="margin-left: 8px"
             >
-              <ion-item
-                lines="none"
-                class="ion-no-padding"
-                [color]="layer.active ? 'ibf-no-alert-primary' : 'ibf-white'"
-                style="width: 100%"
+              {{ layer.label }}
+            </ion-label>
+            <ion-button
+              slot="end"
+              fill="clear"
+              class="ion-no-margin"
+              (click)="presentPopover($event, layer)"
+            >
+              <ion-icon
+                color="ibf-no-alert-primary"
+                name="information-circle-outline"
+                data-test="matrix-icon"
+                class="info-icon"
+              ></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-row>
+        <ion-radio-group [value]="getActiveRadioLayer()">
+          <ion-row
+            *ngFor="let layer of getLayersInOrder().radio"
+            class="ion-justify-content-between ion-nowrap"
+          >
+            <ion-item lines="full">
+              <ion-spinner *ngIf="layer.isLoading"></ion-spinner>
+              <ion-radio
+                *ngIf="!layer.isLoading"
+                (click)="toggleLayer(layer)"
+                class="ion-no-margin menu-radio-button"
+                slot="start"
+                [value]="layer"
+              ></ion-radio>
+              <ion-label
+                class="ion-text-wrap ion-no-margin"
+                [title]="layer.label"
+                style="margin-left: 8px"
+              >
+                {{ layer.label }}
+              </ion-label>
+              <ion-button
+                slot="end"
+                fill="clear"
+                class="ion-no-margin"
+                (click)="presentPopover($event, layer)"
               >
                 <ion-icon
-                  [color]="layer.active ? 'ibf-white' : 'ibf-no-alert-primary'"
-                  [name]="
-                    layer.active
-                      ? 'information-circle'
-                      : 'information-circle-outline'
-                  "
-                  size="large"
-                  class="layer-control-info-icon"
-                  (click)="presentPopover($event, layer)"
+                  color="ibf-no-alert-primary"
+                  name="information-circle-outline"
                   data-test="matrix-icon"
+                  class="info-icon"
                 ></ion-icon>
-              </ion-item>
-            </ion-col>
+              </ion-button>
+            </ion-item>
           </ion-row>
-        </ion-item>
+        </ion-radio-group>
       </ion-list>
     </ion-content>
   </ion-menu>
