--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -3,7 +3,7 @@
   top: 10px;
   bottom: 0;
   right: 0;
-  width: 25%;
+  width: 28%;
 
   ion-menu {
     --width: 100%;
@@ -11,97 +11,6 @@
 
     ion-content {
       --background: transparent;
-
-      ion-list {
-        ion-item {
-          --min-height: 32px;
-          --inner-padding-end: 0;
-          --border-color: var(--ion-color-ibf-no-alert-primary);
-
-          cursor: pointer;
-
-          ion-row {
-            height: 100%;
-            width: 100%;
-
-            .layer-control-info-col {
-              display: flex;
-            }
-
-            .point-layer {
-              background-color: var(--ion-color-ibf-no-alert-primary);
-              background-repeat: no-repeat;
-              background-position: center;
-              background-size: contain;
-              padding: 4px;
-              background-origin: content-box;
-            }
-
-            .glofas-layer {
-              background-image: url('../../../assets/markers/trigger-icon.svg');
-            }
-            .typhoon-track-layer {
-              background-image: url('../../../assets/markers/typhoon-track.png');
-            }
-            .red-cross-layer {
-              background-image: url('../../../assets/markers/red-cross-icon.svg');
-            }
-            .dam-layer {
-              background-image: url('../../../assets/markers/dam-icon.svg');
-            }
-            .waterpoint-layer {
-              background-image: url('../../../assets/markers/water-point-icon.svg');
-            }
-            .health-layer {
-              background-image: url('../../../assets/markers/health-center-icon.svg');
-            }
-            .evacuation-center-layer {
-              background-image: url('../../../assets/markers/evacuation-center-icon.svg');
-            }
-            .school-layer {
-              background-image: url('../../../assets/markers/school-icon.svg');
-            }
-            .community-notification-layer {
-              background-image: url('../../../assets/markers/community-notification-icon.svg');
-            }
-            .outline-layer {
-              border: solid;
-              border-color: var(--ion-color-ibf-outline-red) !important;
-              border-width: 3px !important;
-              background: #2c3136 !important;
-            }
-            .aggregate-layer-triggered {
-              background-image: url('../../../assets/icons/Legend_aggregate_layer-triggered.svg') !important;
-              background-size: contain !important;
-            }
-            .aggregate-layer-non-triggered {
-              background-image: url('../../../assets/icons/Legend_aggregate_layer-non-triggered.svg') !important;
-              background-size: contain !important;
-            }
-            .raster-layer-raifall-forecast {
-              background-image: url('../../../assets/icons/Legend_raster_layer_rainfall_forecast.svg') !important;
-              background-size: contain !important;
-            }
-
-            .layer-control-label-col {
-              ion-item {
-                --background: transparent;
-
-                ion-label {
-                  text-transform: capitalize;
-                  line-height: 1.2;
-                  padding: 4px 8px;
-                  font-size: 11px;
-                }
-              }
-            }
-
-            .layer-control-info-icon {
-              border-radius: 5px;
-            }
-          }
-        }
-      }
     }
   }
 
@@ -110,6 +19,42 @@
 
     ion-toolbar {
       --min-height: 36px;
+    }
+  }
+  ion-row {
+    min-height: 36px;
+  }
+
+  ion-item {
+    width: 100%;
+    --min-height: 36px;
+    --padding-bottom: 0;
+    --padding-top: 0;
+    --padding-start: 4px;
+    --padding-end: 4px;
+    --inner-padding-start: 0;
+    --inner-padding-end: 0;
+
+    ion-checkbox {
+      --border-color: var(--ion-color-ibf-no-alert-primary);
+      --border-color-checked: var(--ion-color-ibf-no-alert-primary);
+      --background-checked: var(--ion-color-ibf-no-alert-primary);
+    }
+
+    ion-radio {
+      --color: var(--ion-color-ibf-no-alert-primary);
+      --color-checked: var(--ion-color-ibf-no-alert-primary);
+    }
+
+    ion-label {
+      width: 80%;
+      font-size: 16px;
+    }
+
+    .info-icon {
+      font-size: 24px;
+
+      cursor: pointer;
     }
   }
 }
