fix: add km and MWK units in middle column AB#20153

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -85,6 +85,7 @@
                   ) | percent: '.0-0'
                 }}
               </span>
+              {{ indicator.aggregateUnit }}
             </ion-label>
           </ion-item>
         </ion-col>
