feat: hide menu backdrop AB#20157

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -12,9 +12,15 @@
     ion-content {
       --background: transparent;
     }
+
+    ion-content::part(scroll), ion-content::part(background) {
+      height: max-content;
+    }
+
   }
 
   ion-menu::part(backdrop) {
+    display: none;
     background: transparent;
   }
   ion-menu-toggle {
