--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -20,6 +20,7 @@
     (ionDidOpen)="isLayerControlMenuOpen()"
     (ionDidClose)="isLayerControlMenuOpen()"
     data-test="layers-control-menu"
+    swipeGesture="false"
   >
     <ion-menu-toggle menu="layer-control">
       <ion-header>
