--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -13,10 +13,10 @@
       --background: transparent;
     }
 
-    ion-content::part(scroll), ion-content::part(background) {
+    ion-content::part(scroll),
+    ion-content::part(background) {
       height: max-content;
     }
-
   }
 
   ion-menu::part(backdrop) {
