feat: misc AB#20299 AB#20300

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -46,6 +46,11 @@
     --inner-padding-start: 0;
     --inner-padding-end: 0;
 
+    ion-spinner {
+      width: 18px;
+      height: 18px;
+    }
+
     .matrix-toggler {
       width: 18px;
       height: 18px;
