fix: add tooltip to info button AB#20164

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -73,6 +73,7 @@
               fill="clear"
               class="ion-no-margin info-button"
               (click)="presentPopover($event, layer)"
+              [title]="'aggregates-component.more-information' | translate"
             >
               <ion-icon
                 color="ibf-no-alert-primary"
