feat: only show btn if too late AB#22949

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -9,7 +9,7 @@
                 name: authService.displayName
               }
       "></span>
-      <app-tooltip
+      <app-tooltip *ngIf="isWarn"
         [value]="'chat-component.common.warn-label.tooltip' | translate"
       ></app-tooltip>
     </p>
