--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -11,7 +11,9 @@
     'is-stopped': isStopped,
     'is-triggered': isTriggered,
     'is-not-triggered': isNotTriggered,
-    'is-selected': isSelected
+    'is-selected': isSelected,
+    'is-warning': isWarning,
+    'is-opening-bubble': isOpeningBubble
   }"
 >
   <div class="dialogue-turn--actor">
