--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
@@ -1,7 +1,7 @@
 <ion-button
   data-test="ibf-guide-button"
   (click)="presentPopover()"
-  color="ibf-secondary"
+  color="ibf-tertiary"
   size="small"
 >
   {{ 'ibf-guide-component.title' | translate }}
