--- a/interfaces/IBF-dashboard/src/app/components/activation-log-button/activation-log-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/activation-log-button/activation-log-button.component.html
@@ -5,7 +5,7 @@
     'activation-page.' + getEapKey() + '.page-title' | translate
   "
   size="small"
-  color="ibf-secondary"
+  color="ibf-tertiary"
   (click)="goToPage()"
 >
   <span class="ion-hide-sm-down">{{
