--- a/interfaces/IBF-dashboard/src/app/components/tooltip-popover/tooltip-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/tooltip-popover/tooltip-popover.component.html
@@ -1,4 +1,1 @@
-<ion-label
-  class="ion-padding tooltip--label"
-  [innerHTML]="value"
-></ion-label>
+<ion-label class="ion-padding tooltip--label" [innerHTML]="value"></ion-label>
