feat: disable stop trigger for flash-floods AB#20135

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -305,6 +305,7 @@
         </ion-row>
       </form>
       <ion-button
+        *ngIf="disasterTypeSettings?.enableStopTrigger"
         (click)="openToggleTriggerPopup(area, true)"
         [disabled]="!area.activeTrigger"
         color="ibf-primary"
