--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -1,5 +1,8 @@
 <ion-content scrollY="true">
-<app-dialogue-turn [isWarn]="isWarn && !isMalawiFlashFloods()" [isOpeningBubble]="isMalawiFlashFloods()">
+  <app-dialogue-turn
+    [isWarn]="isWarn && !isMalawiFlashFloods()"
+    [isOpeningBubble]="isMalawiFlashFloods()"
+  >
     <p>
       <span
         [innerHTML]="
@@ -256,7 +259,7 @@
         <ion-item *ngIf="!area.eapActions.length" class="background-light">
           <ion-label class="ion-text-wrap">
             {{
-              noActionsTranslateKey() | translate
+              'chat-component.common.save-actions.no-actions' | translate
             }}</ion-label
           ></ion-item
         >
@@ -322,4 +325,3 @@
     </ng-container>
   </app-dialogue-turn>
 </ion-content>
-
