--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -179,7 +179,8 @@
       background-color: var(--ion-color-ibf-no-alert-tertiary) !important;
       color: var(--ion-color-ibf-no-alert-primary) !important;
     }
-  }}
+  }
+}
 
 .dialogue-turn.is-triggered {
   .dialogue-turn--content {
